--- a/src/components/Users/UsersList.module.css
+++ b/src/components/Users/UsersList.module.css
@@ -10,7 +10,14 @@
 }
 
 .users li {
+  list-style: none;
   border: 1px solid #ccc;
   margin: 0.5rem 0;
   padding: 0.5rem;
+}
+
+ol li,
+ul li {
+  list-style: none;
+  padding: 0.2rem 0;
 }
